# Qt

./: CMakeLists.txt  main.cpp
build-utilityClasses-Desktop_Qt_6_5_1_GCC_64bit-Debug/: Makefile  utilityClasses
build-utilityClasses-Desktop_Qt_6_5_1_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-utilityClasses-Desktop_Qt_6_5_1_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QCoreApplication.2C3566F64B33DC9D.idx  __stddef_max_align_t.h.2BDA7BFBC67E4248.idx  align.h.39AE23050B3DB93E.idx  alloca.h.B3C3404035C15EA6.idx  atomic_base.h.F118387B313E4F7F.idx  cstddef.337D34E624285F88.idx  cstdint.131423F6DD978BF6.idx  cxxabi_init_exception.h.430CE6EB8B5EC125.idx  limits.h.C7B10056AE043038.idx  locale.h.5F1EA2E91D0CD92F.idx  main.cpp.19ADB7A726F1C875.idx  q20memory.h.A33A2F0426077BCC.idx  q20type_traits.h.B561F0D949A24DC4.idx  qalgorithms.h.9BF34A2E2406CD31.idx  qanystringview.h.4FC29346CDB721F9.idx  qarraydata.h.A55D3CE1BC413287.idx  qarraydataops.h.E36ACC655E9B29AC.idx  qarraydatapointer.h.E27767DB17D1136E.idx  qassert.h.2A7E9E6D74972F35.idx  qatomic.h.0AD9D2EB46871D78.idx  qatomic_cxx11.h.7F7ED0E39ADC9492.idx  qbasicatomic.h.FF786EEDF61ADB94.idx  qbindingstorage.h.414C15E0CFB78418.idx  qbytearray.h.0D5D90E670E31C29.idx  qbytearrayalgorithms.h.89A8F8EC7A64DE59.idx  qbytearraylist.h.1FBFBD1FEC531521.idx  qbytearrayview.h.46521576C62EE91A.idx  qchar.h.9E9AF75D33FB55A7.idx  qcompare.h.3AA111DB0450A2A6.idx  qcompare_impl.h.558348234123BD57.idx  qcompilerdetection.h.2991350C4A971492.idx  (+99 more)
utilityClasses/: main.cpp  myfil2e.txt  myfile.txt
